command line: fix for #670 -vmargs conflict between omnetpp.ini and the launcher script.
X-Committed-on-Branch: omnetpp-4.3.x